k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "myserver"
  labels:
    name: "myserver"
spec:
  containers:
    - name: myserver
      image: "kadmo/hello-go:latest"
