k8s/nlb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myserver-service
spec:
  selector:
    app: myserver
  type: LoadBalancer
  ports:
    - name: myserver-service
      port: 80
      protocol: TCP
